force-app/main/default/objects/animalos__Medicine_Used__c/animalos__Medicine_Used__c.object-meta.xml
<CustomObject>
    <label>Medicine Used</label>
    <nameField>
        <displayFormat>MU{00000}</displayFormat>
        <label>Medicine Used ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medicines Used</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>