force-app/main/default/objects/animalos__Medicine_Used__c/fields/animalos__Animal_Action__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Action</label>
    <referenceTo>animalos__Animal_Action__c</referenceTo>
    <relationshipLabel>Medicines Used (Animal Action)</relationshipLabel>
    <relationshipName>Medicines</relationshipName>
    <type>Lookup</type>
</CustomField>