force-app/main/default/objects/animalos__Medicine_Used__c/fields/animalos__Date_Time_Used__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_Time_Used__c</fullName>
    <label>Date/Time Used</label>
    <type>DateTime</type>
</CustomField>