force-app/main/default/objects/animalos__Medicine_Used__c/fields/animalos__Dosage__c.field-meta.xml
<CustomField>
    <fullName>animalos__Dosage__c</fullName>
    <label>Dosage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>