force-app/main/default/objects/animalos__Medicine_Used__c/fields/animalos__Instructions__c.field-meta.xml
<CustomField>
    <fullName>animalos__Instructions__c</fullName>
    <label>Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>