force-app/main/default/objects/animalos__Medicine_Used__c/fields/animalos__Medicine__c.field-meta.xml
<CustomField>
    <fullName>animalos__Medicine__c</fullName>
    <label>Medicine</label>
    <referenceTo>animalos__Medicine__c</referenceTo>
    <relationshipLabel>Medicines Used</relationshipLabel>
    <relationshipName>Medicines_Used</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>