force-app/main/default/objects/animalos__Medicine_Used__c/fields/animalos__Vet_Consult__c.field-meta.xml
<CustomField>
    <fullName>animalos__Vet_Consult__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vet Consult</label>
    <referenceTo>animalos__Vet_Consult__c</referenceTo>
    <relationshipLabel>Medicines Used</relationshipLabel>
    <relationshipName>Medicines_Used</relationshipName>
    <type>Lookup</type>
</CustomField>