force-app/main/default/objects/animalos__Medicine_Used__c/fields/aos_Assessment__c.field-meta.xml
<CustomField>
    <fullName>aos_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>animalos__Assessment__c</referenceTo>
    <relationshipLabel>Medicines Used</relationshipLabel>
    <relationshipName>aos_Medicines_Used</relationshipName>
    <type>Lookup</type>
</CustomField>