force-app/main/default/objects/animalos__Medicine_Used__c/fields/aos_Job__c.field-meta.xml
<CustomField>
    <fullName>aos_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>animalos__Job__c</referenceTo>
    <relationshipLabel>Medicines Used</relationshipLabel>
    <relationshipName>Medicines_Used</relationshipName>
    <type>Lookup</type>
</CustomField>