force-app/main/default/objects/animalos__Medicine_Used__c/fields/aos_Medicine_Route__c.field-meta.xml
<CustomField>
    <fullName>aos_Medicine_Route__c</fullName>
    <label>Medicine Route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>