force-app/main/default/objects/animalos__Medicine_Used__c/fields/aos_Strength__c.field-meta.xml
<CustomField>
    <fullName>aos_Strength__c</fullName>
    <label>Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>